@@ -14,6 +14,7 @@ before_install:
 
 install:
  - pip3 install git+https://github.com/prusa3d/Prusa-Connect-SDK-Printer.git@master#egg=prusa.connect.sdk.printer
+ - pip3 install git+https://github.com/PoorHttp/PoorWSGI.git@master
  - pip3 install -U -r requirements.txt
  - pip3 install -U types-pkg_resources
  - pip3 install -U pytest pytest-pylint pytest-doctestplus pytest-mypy mock
